package project.app.projektsystem_obslugi_linii_lotniczych;

public class TicketPage extends FocusController{
}
